removed inline styles for sections and added to css file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <span class="border">Eleven 23 Studios</span>
   </div>
 </div>
-<div style="background-color: #808080; padding: 50px 50px;" id="about">
+<div id="about">
   <h2>About</h2><hr/>
   <div class="row">
     <div class="col-md-12 col-lg-5">
@@ -50,7 +50,7 @@
   </div>
 </div>
 <div class="bgimg-2"></div>
-<div style="background-color: #808080; padding: 50px 50px;" id="portfolio">
+<div id="portfolio">
   <h2>Portfolio</h2><hr/>
   <p>The last time I made a website without the use of a WYSIWYG editor was back when CSS was just starting out.  It was for a car sales lot near my house.  The website and car lot are long since gone.  I have not had any part in creating the websites listed below.  I simply liked the design and need place holders until I build my own portfolio.</p>
   <div class="row">
@@ -112,7 +112,7 @@
 
 </div>
 <div class="bgimg-3"></div>
-<div style="background-color: #808080; padding: 50px 50px;" id="contact">
+<div id="contact">
   <h2>Contact</h2><hr/>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-1 col-lg-1"></div>
