fixed float hack with bootstrap clearfix

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         </div>
       </div>
     </div>
+    <div class="clearfix visible-sm-block"></div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
       <div class="thumbnail">
         <a href="http://plazaclassic.com/" target="_blank"><img src="http://i65.tinypic.com/abrolg.png" alt="Plaza Film Festival Website"></a>
@@ -81,6 +82,7 @@
         </div>
       </div>
     </div>
+    <div class="clearfix visible-md-block visible-lg-block"></div>
    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
       <div class="thumbnail">
         <a href="http://www.1bite2go.com/en/" target="_blank"><img src="http://i64.tinypic.com/2q325qu.png" alt="1 Bite 2 Go Website"></a>
@@ -90,6 +92,7 @@
         </div>
       </div>
     </div>
+    <div class="clearfix visible-sm-block"></div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
       <div class="thumbnail">
         <a href="http://xofestival.nl/en/" target="_blank"><img src="http://i68.tinypic.com/2efjjgp.png" alt="XO Festival Website"></a>
